--- a/eliza.ipynb
+++ b/eliza.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "eliza.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -309,26 +310,67 @@
       "metadata": {
         "id": "HRJXX7Zs-l1m",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "fc8433be-1c1a-4176-c5c8-721678352d85",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        }
       },
       "source": [
         "doctest.run_docstring_examples(task0_true, globals(), name=\"task0\", verbose=True)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task0\n",
+            "Trying:\n",
+            "    2+2\n",
+            "Expecting:\n",
+            "    4\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "jhYsBBcX_BAD",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "5a9e7c5e-b486-407c-fd23-8ab348b3fadd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
       },
       "source": [
         "doctest.run_docstring_examples(task0_false, globals(), name=\"task0\", verbose=True)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task0\n",
+            "Trying:\n",
+            "    2+2\n",
+            "Expecting:\n",
+            "    5\n",
+            "**********************************************************************\n",
+            "File \"__main__\", line 3, in task0\n",
+            "Failed example:\n",
+            "    2+2\n",
+            "Expected:\n",
+            "    5\n",
+            "Got:\n",
+            "    4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -453,9 +495,22 @@
       },
       "source": [
         "script = {\n",
-        "    \"no\": {\"decomposition\": r\".*\",\n",
-        "           \"reassembly\": [\n",
-        "               \"Are you saying 'no' just to be negative?\"]}}"
+        "    \"no\": {\"decomposition\": r\".*\",               #słownik w słowniku\n",
+        "           \"reassembly\": [                       #szuka regexu, sprawdza, czy się zgadza z regexem, po czym robi zamianę na reassembly (zamiana inputu na output)\n",
+        "               \"Are you saying 'no' just to be negative?\", \"You are being a bit negative\", \"Why not\"]},\n",
+        "    \"yes\": {\"decomposition\": r\".*\",\n",
+        "            \"reassembly\": [\"What bothers you?\"]},\n",
+        "    \"hmm\": {\"decomposition\": r\".*\",\n",
+        "            \"reassembly\": [\"I am not sure I understand you fully\"]},\n",
+        "    \"I\": {\"decomposition\": r\".*I am (.*)\",\n",
+        "          \"reassembly\": [r\"Is it because you are \\1 that you came to me?\"]},  \n",
+        "    #None: {\"decomposition\": r\".*\",\n",
+        "           #\"reassembly\": \"I don't understand you fully\"}                  \n",
+        "          }    \n",
+        "          \n",
+        "          \n",
+        "          \n",
+        "#I love my car - why do you love yor car? SUBSTITUTION (sub) --> hasło w słowniku, które zmienia my na your - i love your car; love -- r(.*your(.*)) --> why do you love [your] \\2?"
       ],
       "execution_count": 0,
       "outputs": []
@@ -478,7 +533,7 @@
         "colab": {}
       },
       "source": [
-        "substitutions = {}"
+        "substitutions = {\"yourself\":\"myself\"}"
       ],
       "execution_count": 0,
       "outputs": []
@@ -521,39 +576,105 @@
       "metadata": {
         "id": "wn9vlY7W-GQY",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 286
+        },
+        "outputId": "45d8fc03-c89c-416e-e3b5-31b30f57c97a"
       },
       "source": [
-        "#doctest.run_docstring_examples(task1, globals(), name=\"task1\", verbose=True)"
+        "doctest.run_docstring_examples(task1, globals(), name=\"task1\", verbose=True)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task1\n",
+            "Trying:\n",
+            "    process(\"I have no problems\")\n",
+            "Expecting:\n",
+            "    \"Are you saying 'no' just to be negative?\"\n",
+            "ok\n",
+            "Trying:\n",
+            "    process(\"no\")\n",
+            "Expecting:\n",
+            "    'You are being a bit negative'\n",
+            "ok\n",
+            "Trying:\n",
+            "    process(\"no\")\n",
+            "Expecting:\n",
+            "    'Why not'\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "brEFxEODftlt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "731a0f37-4f80-4f60-a908-6715c9ad83a9"
       },
       "source": [
-        "#doctest.run_docstring_examples(task2, globals(), name=\"task2\", verbose=True)\n"
+        "doctest.run_docstring_examples(task2, globals(), name=\"task2\", verbose=True)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task2\n",
+            "Trying:\n",
+            "    process(\"hmm\")\n",
+            "Expecting:\n",
+            "    'I am not sure I understand you fully'\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "zm48COwCftyU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "e79c00ab-fa18-4c16-f529-59440b4f5fb0"
       },
       "source": [
-        "#doctest.run_docstring_examples(task3, globals(), name=\"task3\", verbose=True)\n"
+        "doctest.run_docstring_examples(task3, globals(), name=\"task3\", verbose=True)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task3\n",
+            "Trying:\n",
+            "    process(\"no, I am not a negative person\")\n",
+            "Expecting:\n",
+            "    'Is it because you are not a negative person that you came to me?'\n",
+            "ok\n",
+            "Trying:\n",
+            "    process(\"no\")\n",
+            "Expecting:\n",
+            "    'You are being a bit negative'\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -596,13 +717,56 @@
       "metadata": {
         "id": "6PgbPkck-GeF",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "4b1a35a7-962f-47a8-f8ae-dfd0a72c7f4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 656
+        }
       },
       "source": [
         "chat()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<hit enter with no input to exit>\n",
+            "Eliza: How do you do. Please tell me your problem\n",
+            "Student: i am not a negative person\n",
+            "Eliza: Is it because you are not a negative person that you came to me?\n",
+            "Student: no\n",
+            "Eliza: Are you saying 'no' just to be negative?\n",
+            "Student: yes\n",
+            "Eliza: What bothers you?\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    729\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 730\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    731\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    465\u001b[0m         \"\"\"\n\u001b[0;32m--> 466\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    467\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-68-e57ee30c65ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-29-8881a6cdf4a1>\u001b[0m in \u001b[0;36mchat\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Eliza: How do you do. Please tell me your problem\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mutt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Student: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mutt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    704\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 705\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    706\u001b[0m         )\n\u001b[1;32m    707\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    733\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    734\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 735\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    736\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    737\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
